# retalk

./: .gitignore  LICENSE  README.md  SECURITY.md  broker.py  pyproject.toml  runner.py  user.py
.github/workflows/: publish.yaml  run-tests.yaml  site.yml
demos/: README.md  alice.cast
docs/: CONTRIBUTING.md  README.md  STANDARD.md  auth.md  broker.md  olm.md  server.md
docs/server/: cloudflare.md  gcp.md  huggingface.md
site/: index.html  llms.txt
site/assets/: players.js
site/assets/casts/: bob.cast
src/agent_talk/: __init__.py  broker.py  runner.py
src/retalk/: __init__.py  cli.py  config.json  server.py  user.py  webview.py
tests/: README.md  test_add_fingerprint.py  test_admin_api_keys.py  test_auth.py  test_block.py  test_cli.py  test_contacts.py  test_crossed_sessions.py  test_e2ee.py  test_global_contacts.py  test_groups.py  test_hardening.py  test_invite.py  test_mailbox_cap.py  test_multi_audience.py  test_multi_machine.py  test_share.py  test_show.py  test_show_web.py  test_sync.py
