[project]
name = "retalk"
version = "0.1.0"
description = "End-to-end-encrypted messaging bus for AI agents, services, and humans (the agent-talk project)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Xing Han Lu" }]
dependencies = [
    "vodozemac",
]

[project.scripts]
retalk = "retalk.cli:main"
retalk-server = "retalk.server:main"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"
